fix: update urls
